Added /health route and updated swagger
